# tamil-tanglish-toolkit

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy-api.yml  eval-real.yml
apps/api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/src/tamil_edu_api/: __init__.py  main.py  models.py
apps/api/tests/: conftest.py  test_analyze.py  test_health.py  test_ocr.py  test_translate.py
apps/web/: .env.example  README.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.test.ts  api.ts  posthog.test.ts  posthog.ts  use-history.test.ts  use-history.ts
data/golden/: README.md  v1.csv
docs/: DEPLOYMENT.md  DEVELOPMENT.md  HACKATHON.md  PLAN.md  SIGNUP.md  SPRINTS.md  TESTING.md  repo-config.md
docs/adr/: 0001-use-ollama-not-modal.md  0002-indicxlit-deferred.md
eval/: README.md  pyproject.toml  run.py  tanglish_eval.py
eval/reports/: 2026-05-23-205115-aksharamukha-v1.md
eval/tests/: test_run.py
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
