[project]
name = "tamil-edu-toolkit"
version = "0.0.0"
description = "Tanglish to Tamil translator for kids learning the language."
requires-python = ">=3.11"
license = { text = "MIT" }
# Workspace members listed here so `uv sync` installs them in editable mode.
# Each must be sourced from the workspace via [tool.uv.sources] below.
dependencies = [
    "tamil-edu-transliterate",
]

[tool.uv.sources]
tamil-edu-transliterate = { workspace = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    # Eval harness deps (jiwer/sacrebleu also live in eval/pyproject.toml; duplicated here
    # so `uv sync --all-extras` at the root installs them for pytest in CI).
    "jiwer>=3.0.4",
    "sacrebleu>=2.4.3",
]

[tool.uv]
package = false

[tool.uv.workspace]
# Only directories with a real, buildable pyproject.toml.
# eval/ is a flat script dir (no pyproject) — its deps live in the root [dev] extras.
# packages/{grammar,ocr,pylib,api} will be added as they get scaffolded in S1+.
members = ["packages/transliterate"]
exclude = []

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "node_modules", ".next"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["apps", "packages", "eval"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["apps", "packages", "eval"]
omit = ["**/tests/**", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
