[project]
name = "tamil-edu-eval"
version = "0.0.0"
description = "Eval harness for tamil-edu-toolkit — CER, WER, BLEU, chrF on the golden Tanglish→Tamil set."
requires-python = ">=3.11"
dependencies = [
    "jiwer>=3.0.4",
    "sacrebleu>=2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamil_edu_eval"]
