[project]
name = "tamil-edu-api"
version = "0.0.1"
description = "FastAPI service: POST /translate wraps tamil-edu-transliterate."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9",
    "tamil-edu-transliterate",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamil_edu_api"]

[tool.uv.sources]
tamil-edu-transliterate = { workspace = true }
